rinkeby/deploy.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: geth-rinkeby
  labels:
    app: geth-rinkeby
spec:
  serviceName: geth-rinkeby
  replicas: 1
  selector:
    matchLabels:
      app: geth-rinkeby
  template:
    metadata:
      labels:
        app: geth-rinkeby
    spec:
      containers:
      - image: ethereum/client-go:latest
        imagePullPolicy: Always
        name: geth-rinkeby
        args:
        - "--rinkeby"
        - "--http"
        - "--http.addr=0.0.0.0"
        - "--http.vhosts=*"
        - "--http.api=eth,net,web3,txpool"
        - "--ws"
        - "--ws.addr=0.0.0.0"
        - "--cache=1024"
        volumeMounts:
        - name: data
          mountPath: /root/.ethereum
          subPath: geth-data
        ports:
        - name: rinkeby-http
          containerPort: 8545
        - name: rinkeby-p2p
          containerPort: 30303
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: geth-r
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: export-rinkeby
  labels:
    app: export-rinkeby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: export-rinkeby
  template:
    metadata:
      labels:
        app: export-rinkeby
    spec:
      containers:
      - image: hunterlong/gethexporter:latest
        name: export-rinkeby
        ports:
        - name: export-rinkeby
          containerPort: 9090
---

kind: Service
apiVersion: v1
metadata:
  name: export-rinkeby
  labels:
    app: export-rinkeby
spec:
  selector:
    app: export-rinkeby
  ports:
  - name: export-rinkeby
    port: 9090
---
kind: Service
apiVersion: v1
metadata:
  name: geth-rinkeby
  labels:
    app: geth-rinkeby
spec:
  selector:
    app: geth-rinkeby
  ports:
  - name: rinkeby-p2p
    port: 30303
    targetPort: rinkeby-p2p
  - name: rinkeby-http
    port: 8545
    targetPort: rinkeby-http
