rinkeby/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geth-rinkeby
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: geth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - ok"
spec:
  rules:
  - host: "rinkeby.tellor.io"
    http:
      paths:
        - backend:
            serviceName: geth-rinkeby
            servicePort: 8545
